--- a/sub-manga-making-manga-panels.html
+++ b/sub-manga-making-manga-panels.html
@@ -63,7 +63,7 @@
       $('div#pol1 > img').css("-webkit-transform", "rotate(0deg)");
       $('div#pol2 > img').css("-webkit-transform", "rotate(5deg)");
       if(sound.canPlayType('audio/mpeg')) {
-        $('#actualaudio-Panels').html('<audio id="Panelsaudio" controls preload onpause="playsManga()" onplay="pauseManga()"><source src="audio/Manga/Manga_Panels.mp3" type="audio/mpeg"></audio>');
+        $('#actualaudio-Panels').html('<audio id="Panelsaudio" controls preload onpause="playsManga()" onplay="pauseManga()"><source src="audio/Manga/Panels.mp3" type="audio/mpeg"></audio>');
       }             
       $("#sub-manga-making-manga-panels").swipe( { swipeRight:goBack, allowPageScroll:"auto"} );
     })();
