--- a/sub-manga-making-manga-symbols.html
+++ b/sub-manga-making-manga-symbols.html
@@ -64,7 +64,7 @@
       $('div#pol1 > img').css("-webkit-transform", "rotate(0deg)");
       $('div#pol2 > img').css("-webkit-transform", "rotate(5deg)");
       if(sound.canPlayType('audio/mpeg')) {
-        $('#actualaudio-MangaSymbols').html('<audio id="MangaSymbolsaudio" controls preload onpause="playsManga()" onplay="pauseManga()"><source src="audio/Manga/Manga_Symbols.mp3" type="audio/mpeg"></audio>');
+        $('#actualaudio-MangaSymbols').html('<audio id="MangaSymbolsaudio" controls preload onpause="playsManga()" onplay="pauseManga()"><source src="audio/Manga/Symbols.mp3" type="audio/mpeg"></audio>');
       }             
       $("#sub-manga-making-manga-symbols").swipe( { swipeRight:goBack, allowPageScroll:"auto"} );
     })();
