--- a/sub-languageculture.html
+++ b/sub-languageculture.html
@@ -5,7 +5,7 @@
     <div id="titleb-holder"><h1 style="margin-top:184px;">Language and Culture</h1></div>
     
     <div style="width:90%;margin:auto;">
-      <div class="aclink"><a href="sub-manga.html" data-transition="slide"><img src="css/images/9-12/Language_and_Culture/mythsbtn.png"></a></div>
+      <div class="aclink"><a href="sub-manga.html" data-transition="slide" id="manga"><img src="css/images/9-12/Language_and_Culture/mythsbtn.png"></a></div>
       <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Language_and_Culture/greetingsbtn.png"></a></div>
       <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Language_and_Culture/calligraphybtn.png"></a></div>
       <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Language_and_Culture/storiesbtn.png"></a></div><br>
@@ -30,5 +30,17 @@
     $('.homelinkbh').on('tap', function() { 
       mainaudiobg.play(); langcultsoundbg.pause(); langcultsoundbg.currentTime = 0;
     });
+	
+	$(document).ready(function(e) {
+		  $('.aclink>a').on('tap', function(event) {
+			var subjectId = $(this).attr("id");
+			if(subjectId == "manga") {
+				bgsoundManga.play();
+				langcultsoundbg.pause();
+				langcultsoundbg.currentTime = 0;
+			} 
+		});
+	});
+	
 			</script>
 </div>
