--- a/sub-slang-features-of-slang-the-slang-factory.html
+++ b/sub-slang-features-of-slang-the-slang-factory.html
@@ -134,7 +134,7 @@
 	var itid		= 0;
 	var goClicked	=	0;	
 	$(document).ready(function(){
-		$("#man-standing").css('display','block');
+		/*$("#man-standing").css('display','block');*/
 		$("#speech-bubble").css('display','block');
 		$("#navSlang-theslangfactory").css('display','block');
 		
