--- a/sub-slang-features-of-slang-the-slang-factory-affixation.html
+++ b/sub-slang-features-of-slang-the-slang-factory-affixation.html
@@ -236,6 +236,7 @@
 	
 		
 		$("#glowing-door").on('tap', function() {
+			clearTimeout(machine);
 			if($('#greyed-door').css('display') == 'none'){
 				$("#greyed-door").css('display','block');
 			}
