--- a/sub-food-football-and-fiesta-language-language-and-identity.html
+++ b/sub-food-football-and-fiesta-language-language-and-identity.html
@@ -12,18 +12,16 @@
   <div class="credsbtnholder"><div class="credsbtnFoodFootballFiesta"></div></div>
   <div class="menubtnholder"><div class="menubtnFoodFootballFiesta"></div></div>
   
-  <div class="bptitleholder" style="padding-top:14px;"><h1>How different are they?</h1></div>
+  <!-- <div class="bptitleholder" style="padding-top:14px;"><h1>Language and identity</h1></div> -->
   
   <div id="spacechar">&nbsp;
     <div data-role="content" class="kidzcontent">    
-      <div class="bpcontentFoodFootballFiesta">
-        <p>Language can show that you belong to a group.  </p>
-
-		<p>Do you speak a "world" language?  How does it sound when you hear it spoken by people from another country?  Familiar yet different?  When you notice variations, you mark those speakers as different from you and language, then, becomes a way you identify with your community.</p> 
-
-		<p>Some Spanish rulers wanted to ban smaller languages because they believed people would only start to identify with Spain if everyone spoke Spanish.  Many people continued speaking their own languages though.  They didn't want to lose the connection to their community. </p>
-
-		<p>Language as a symbol of identity can be positive and negative.  In Catalonia, regardless of where you are from, if you learn to speak Catalan you become part of the group.  On the negative side, in the Dominican Republic, the ability to say the Spanish word for parsley properly was how they decided whether you were considered Dominican or from neighbouring Haiti; many of those that couldn't were killed!</p>
+      <div class="bpcontentFoodFootballFiesta-LanguageAndIdentity">
+       <!--  <p>Language can show that you belong to a group.  </p>
+	<p>Do you speak a "world" language?  How does it sound when you hear it spoken by people from another country?  Familiar yet different?  When you notice variations, you mark those speakers as different from you and language, then, becomes a way you identify with your community. </p>
+	<p>Some Spanish rulers wanted to ban smaller languages because they believed people would only start to identify with Spain if everyone spoke Spanish.  Many people continued speaking their own languages though.  They didn't want to lose the connection to their community. </p>
+	<p>Language as a symbol of identity can be positive and negative.  In Catalonia, regardless of where you are from, if you learn to speak Catalan you become part of the group.  On the negative side, in the Dominican Republic, the ability to say the Spanish word for parsley properly was how they decided whether you were considered Dominican or from neighbouring Haiti; many of those that couldn't were killed! 
+	</p> -->
       </div>
        
       <div class="botlogoholder"><a href="home.html" class="homelinkbh"><img src="css/images/9-12/Language_and_Culture/bottomhomelc.png"></a></div>
@@ -47,7 +45,7 @@
       playing = false;
       paused = true;
       if(sound.canPlayType('audio/mpeg')) {
-        $('#actualaudio-LanguageAndIdentity').html('<audio id="LanguageAndIdentityaudio" controls preload onpause="playsFoodFootballFiesta()" onplay="pauseFoodFootballFiesta()"><source src="audio/Food_Football_And_Fiesta/How_Different_Are_They.mp3" type="audio/mpeg"></audio>');
+        $('#actualaudio-LanguageAndIdentity').html('<audio id="LanguageAndIdentityaudio" controls preload onpause="playsFoodFootballFiesta()" onplay="pauseFoodFootballFiesta()"><source src="audio/Food_Football_And_Fiesta/Language_And_Identity.mp3" type="audio/mpeg"></audio>');
       } 
     
       $("#sub-food-football-and-fiesta-language-language-and-identity").swipe( { swipeRight:goBack, allowPageScroll:"auto"} );
@@ -109,5 +107,4 @@
       //$(".audiopanel").css({"backgroundPosition":"0px 0px"});
     });
   </script>
-    <script src="js/threecardLogic.js"></script>  <!-- for card dragging effects -->
 </div> <!--//home-->
